Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19329

sanity-lfsck test_23d: @@@@@@ FAIL: file body has changed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      == sanity-lfsck test 23d: LFSCK can repair a dangling name entry to a remote object ========================================================== 14:58:45 (1756997925)
      Stopping /mnt/lustre-mds1 (opts:) on tmp.xcA8sUuoi1
      debugfs 1.46.2.wc5 (26-Mar-2022)
      
      Start mds1: mount -t lustre -o localrecov  /dev/mapper/mds1_flakey /mnt/lustre-mds1
      Started lustre-MDT0000
      cat: /mnt/lustre/d23d.sanity-lfsck/mdt1dir/foo: Bad address
      Started LFSCK on the device lustre-MDT0001: scrub namespace
      Waiting 32s for 'completed'
      Started LFSCK on the device lustre-MDT0000: scrub layout
      cmp: EOF on /mnt/lustre/d23d.sanity-lfsck/mdt1dir/foo which is empty
       sanity-lfsck test_23d: @@@@@@ FAIL: file body has changed 
        Trace dump:
        = ./../tests/test-framework.sh:7379:error()
        = sanity-lfsck.sh:4255:test_23d()
        = ./../tests/test-framework.sh:7755:run_one()
        = ./../tests/test-framework.sh:7818:run_one_logged()
        = ./../tests/test-framework.sh:7633:run_test()
        = sanity-lfsck.sh:4257:main()
      Dumping lctl log to /tmp/ltest-logs/sanity-lfsck.test_23d.*.1756997928.log
      Dumping logs only on local client.
      FAIL 23d (4s)
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: