LU-19329 lfsck: treat EAGAIN as a transient error

master-to-slave communication can return EAGAIN due to transient
network failure, do not interrupt LFSCK, try few times like we
do for ENOTCONN and ESHUTDOWN

Test-Parameters: env=ONLY=23d,ONLY_REPEAT=30 testlist=sanity-lfsck
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I9f45cea508296fef4d82c3ae8c62d663ece90d76
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61159
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@dilger.ca>
Tested-by: jenkins <devops@whamcloud.com>